ags (2.1.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.

ags (2.1.68)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disabled defaulted AGS_SOUND_BEHAVIOUR_REVERSE_MAPPING of AgsDrum
	* fixed missing unset of AGS_SOUND_BEHAVIOUR_REVERSE_MAPPING in ags_simple_file.c

ags (2.1.67)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong argument to g_object_unref() in ags_start_sequencer.c
	* fixed 64 bit issue in ags_copy_pattern_channel_run.c
	* fixed 64 bit issue in ags_play_notation_audio_run.c

ags (2.1.66)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong tag in OSC server manual chap6.xml
	* improved API reference manual

ags (2.1.65)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_mutex_manager_remove() to not destroy data at all
	* fixed dead-lock on kfreebsd as ags_cond_manager_remove() destroys data twice
	* improved API reference manual structure of libags_audio.xml
	* improved API reference manual structure of libgsequencer.xml

ags (2.1.64)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed accessing using wrong property name in ags_channel_get_level()
	* minor improvements and fixed memory-leaks

ags (2.1.63)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ref count of return value and calls from/to ags_audio_collect_all_audio_ports()
	* fixed ref count of return value and calls from/to ags_audio_collect_all_audio_ports_by_specifier_and_context()
	* fixed ref count of return value and calls from/to ags_channel_collect_all_channel_ports()
	* fixed ref count of return value and calls from/to ags_channel_collect_all_channel_ports_by_specifier_and_context()
	* fixed ref count of return value and calls from/to ags_channel_get_level()
	* fixed ref count of return value from ags_recycling_find_next_channel()