@@ -105,9 +105,11 @@ static AgsConnectableInterface *ags_audio_loop_parent_connectable_interface;
 GType
 ags_audio_loop_get_type()
 {
-  static GType ags_type_audio_loop = 0;
+  static volatile gsize g_define_type_id__volatile = 0;
 
-  if(!ags_type_audio_loop){
+  if(g_once_init_enter (&g_define_type_id__volatile)){
+    GType ags_type_audio_loop = 0;
+
     static const GTypeInfo ags_audio_loop_info = {
       sizeof (AgsAudioLoopClass),
       NULL, /* base_init */
@@ -144,9 +146,11 @@ ags_audio_loop_get_type()
     g_type_add_interface_static(ags_type_audio_loop,
 				AGS_TYPE_MAIN_LOOP,
 				&ags_main_loop_interface_info);
+
+    g_once_init_leave(&g_define_type_id__volatile, ags_type_audio_loop);
   }
-  
-  return (ags_type_audio_loop);
+
+  return g_define_type_id__volatile;
 }
 
 void
