@@ -77,9 +77,11 @@ static AgsConnectableInterface *ags_audio_thread_parent_connectable_interface;
 GType
 ags_audio_thread_get_type()
 {
-  static GType ags_type_audio_thread = 0;
+  static volatile gsize g_define_type_id__volatile = 0;
 
-  if(!ags_type_audio_thread){
+  if(g_once_init_enter (&g_define_type_id__volatile)){
+    GType ags_type_audio_thread = 0;
+
     static const GTypeInfo ags_audio_thread_info = {
       sizeof (AgsAudioThreadClass),
       NULL, /* base_init */
@@ -106,9 +108,11 @@ ags_audio_thread_get_type()
     g_type_add_interface_static(ags_type_audio_thread,
 				AGS_TYPE_CONNECTABLE,
 				&ags_connectable_interface_info);
+
+    g_once_init_leave(&g_define_type_id__volatile, ags_type_audio_thread);
   }
-  
-  return (ags_type_audio_thread);
+
+  return g_define_type_id__volatile;
 }
 
 void
