@@ -69,9 +69,11 @@ static AgsConnectableInterface *ags_channel_thread_parent_connectable_interface;
 GType
 ags_channel_thread_get_type()
 {
-  static GType ags_type_channel_thread = 0;
+  static volatile gsize g_define_type_id__volatile = 0;
 
-  if(!ags_type_channel_thread){
+  if(g_once_init_enter (&g_define_type_id__volatile)){
+    GType ags_type_channel_thread = 0;
+
     static const GTypeInfo ags_channel_thread_info = {
       sizeof (AgsChannelThreadClass),
       NULL, /* base_init */
@@ -98,9 +100,11 @@ ags_channel_thread_get_type()
     g_type_add_interface_static(ags_type_channel_thread,
 				AGS_TYPE_CONNECTABLE,
 				&ags_connectable_interface_info);
+
+    g_once_init_leave(&g_define_type_id__volatile, ags_type_channel_thread);
   }
-  
-  return (ags_type_channel_thread);
+
+  return g_define_type_id__volatile;
 }
 
 void
