@@ -81,9 +81,11 @@ static guint sequencer_thread_signals[LAST_SIGNAL];
 GType
 ags_sequencer_thread_get_type()
 {
-  static GType ags_type_sequencer_thread = 0;
+  static volatile gsize g_define_type_id__volatile = 0;
 
-  if(!ags_type_sequencer_thread){
+  if(g_once_init_enter (&g_define_type_id__volatile)){
+    GType ags_type_sequencer_thread = 0;
+
     static const GTypeInfo ags_sequencer_thread_info = {
       sizeof (AgsSequencerThreadClass),
       NULL, /* base_init */
@@ -110,9 +112,11 @@ ags_sequencer_thread_get_type()
     g_type_add_interface_static(ags_type_sequencer_thread,
 				AGS_TYPE_CONNECTABLE,
 				&ags_connectable_interface_info);
+
+    g_once_init_leave(&g_define_type_id__volatile, ags_type_sequencer_thread);
   }
-  
-  return (ags_type_sequencer_thread);
+
+  return g_define_type_id__volatile;
 }
 
 void
