@@ -84,9 +84,11 @@ enum{
 GType
 ags_soundcard_thread_get_type()
 {
-  static GType ags_type_soundcard_thread = 0;
+  static volatile gsize g_define_type_id__volatile = 0;
 
-  if(!ags_type_soundcard_thread){
+  if(g_once_init_enter (&g_define_type_id__volatile)){
+    GType ags_type_soundcard_thread = 0;
+
     static const GTypeInfo ags_soundcard_thread_info = {
       sizeof (AgsSoundcardThreadClass),
       NULL, /* base_init */
@@ -113,9 +115,11 @@ ags_soundcard_thread_get_type()
     g_type_add_interface_static(ags_type_soundcard_thread,
 				AGS_TYPE_CONNECTABLE,
 				&ags_connectable_interface_info);
+
+    g_once_init_leave(&g_define_type_id__volatile, ags_type_soundcard_thread);
   }
-  
-  return (ags_type_soundcard_thread);
+
+  return g_define_type_id__volatile;
 }
 
 void
